// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nightingale-navigation tests it should display the navigation correctly 1`] = `
<nightingale-navigation
  display-end="1"
  display-start="1"
  height="15"
  highlight-color="#FFEB3B66"
  length="10"
  min-height="10"
  min-width="10"
  style="width: 100%; display: inline-block; line-height: 0;"
>
  <!---->
  <svg
    class="container"
    height="15"
    id=""
    width="100"
  >
    <text
      class="start-label"
      style="font-family: sans-serif;"
      x="10"
      y="13"
    >
      1
    </text>
    <text
      class="end-label"
      style="font-family: sans-serif;"
      text-anchor="end"
      x="90"
      y="13"
    >
      1
    </text>
    <g
      class="x axis"
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
    >
      <path
        class="domain"
        d="M20.5,6V0.5H80.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(20.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          1
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(27.166666666666668,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          2
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(33.833333333333336,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          3
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(40.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          4
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(47.16666666666667,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          5
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(53.83333333333333,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          6
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(60.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          7
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(67.16666666666667,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          8
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(73.83333333333334,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          9
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(80.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          10
        </text>
      </g>
    </g>
    <g
      class="brush"
      fill="none"
      pointer-events="all"
    >
      <rect
        class="overlay"
        cursor="crosshair"
        height="10.5"
        pointer-events="all"
        width="60"
        x="20"
        y="0"
      />
      <rect
        class="selection"
        cursor="move"
        fill="#777"
        fill-opacity="0.3"
        height="10.5"
        shape-rendering="crispEdges"
        stroke="#fff"
        style=""
        width="0"
        x="20"
        y="0"
      />
      <rect
        class="handle handle--w"
        cursor="ew-resize"
        height="16.5"
        style=""
        width="6"
        x="17"
        y="-3"
      />
      <rect
        class="handle handle--e"
        cursor="ew-resize"
        height="16.5"
        style=""
        width="6"
        x="17"
        y="-3"
      />
    </g>
    <polygon
      class="zoom-polygon"
      fill="#777"
      fill-opacity="0.3"
      points="20,7.5
        20,7.5
        90,15
        10,15"
    />
    <g
      class="margin"
    >
      <rect
        class="margin-left"
        fill="#FFFFFFDD"
        height="15"
        style="pointer-events: none;"
        width="10"
        x="0"
      />
      <rect
        class="margin-right"
        fill="#FFFFFFDD"
        height="15"
        style="pointer-events: none;"
        width="10"
        x="90"
      />
      <rect
        class="margin-top"
        fill="#FFFFFFDD"
        height="0"
        style="pointer-events: none;"
        width="100"
        x="0"
        y="0"
      />
      <rect
        class="margin-bottom"
        fill="#FFFFFFDD"
        height="0"
        style="pointer-events: none;"
        width="100"
        x="0"
        y="15"
      />
    </g>
    <g
      class="highlighted"
    />
  </svg>
</nightingale-navigation>
`;

exports[`nightingale-navigation tests it should display the navigation correctly after zoom 1`] = `
<nightingale-navigation
  display-end="4"
  display-start="2"
  height="15"
  highlight-color="#FFEB3B66"
  length="10"
  min-height="10"
  min-width="10"
  style="width: 100%; display: inline-block; line-height: 0;"
>
  <!---->
  <svg
    class="container"
    height="15"
    id=""
    width="100"
  >
    <text
      class="start-label"
      style="font-family: sans-serif;"
      x="10"
      y="13"
    >
      2
    </text>
    <text
      class="end-label"
      style="font-family: sans-serif;"
      text-anchor="end"
      x="90"
      y="13"
    >
      4
    </text>
    <g
      class="x axis"
      fill="none"
      font-family="sans-serif"
      font-size="10"
      text-anchor="middle"
    >
      <path
        class="domain"
        d="M20.5,6V0.5H80.5V6"
        stroke="currentColor"
      />
      <g
        class="tick"
        opacity="1"
        transform="translate(20.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          1
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(27.166666666666668,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          2
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(33.833333333333336,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          3
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(40.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          4
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(47.16666666666667,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          5
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(53.83333333333333,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          6
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(60.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          7
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(67.16666666666667,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          8
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(73.83333333333334,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          9
        </text>
      </g>
      <g
        class="tick"
        opacity="1"
        transform="translate(80.5,0)"
      >
        <line
          stroke="currentColor"
          y2="6"
        />
        <text
          dy="0.71em"
          fill="currentColor"
          y="9"
        >
          10
        </text>
      </g>
    </g>
    <g
      class="brush"
      fill="none"
      pointer-events="all"
    >
      <rect
        class="overlay"
        cursor="crosshair"
        height="10.5"
        pointer-events="all"
        width="60"
        x="20"
        y="0"
      />
      <rect
        class="selection"
        cursor="move"
        fill="#777"
        fill-opacity="0.3"
        height="10.5"
        shape-rendering="crispEdges"
        stroke="#fff"
        style=""
        width="13.333333333333332"
        x="26.666666666666668"
        y="0"
      />
      <rect
        class="handle handle--w"
        cursor="ew-resize"
        height="16.5"
        style=""
        width="6"
        x="23.666666666666668"
        y="-3"
      />
      <rect
        class="handle handle--e"
        cursor="ew-resize"
        height="16.5"
        style=""
        width="6"
        x="37"
        y="-3"
      />
    </g>
    <polygon
      class="zoom-polygon"
      fill="#777"
      fill-opacity="0.3"
      points="26.666666666666668,7.5
        40,7.5
        90,15
        10,15"
    />
    <g
      class="margin"
    >
      <rect
        class="margin-left"
        fill="#FFFFFFDD"
        height="15"
        style="pointer-events: none;"
        width="10"
        x="0"
      />
      <rect
        class="margin-right"
        fill="#FFFFFFDD"
        height="15"
        style="pointer-events: none;"
        width="10"
        x="90"
      />
      <rect
        class="margin-top"
        fill="#FFFFFFDD"
        height="0"
        style="pointer-events: none;"
        width="100"
        x="0"
        y="0"
      />
      <rect
        class="margin-bottom"
        fill="#FFFFFFDD"
        height="0"
        style="pointer-events: none;"
        width="100"
        x="0"
        y="15"
      />
    </g>
    <g
      class="highlighted"
    />
  </svg>
</nightingale-navigation>
`;
